# ark-api-server

./: .dockerignore  Dockerfile  README.md  decoder-setup  decoder-setup.sh  docker-compose.yaml  openai_api_server.py  openai_protocol.py  prefiller-setup  pyproject.toml  rpc_method.py  start.sh
proto/: __init__.py  ark.proto  ark_pb2.py  ark_pb2.pyi  ark_pb2_grpc.py
